# agence

./: .gitmodules  README.md  contracts.code-workspace  services.code-workspace  web.code-workspace
client/: .gitignore  .prettierrc  components.json  generate-clients.sh  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
client/src/: middleware.ts
contracts/: .gitignore  Makefile  deploy.sh  foundry.toml  hardhat.config.js  package-lock.json  package.json
contracts/algorand/: .algokit.toml  README.md  package-lock.json  package.json  pyproject.toml
contracts/data/: base_sepolia_address.json  polygon_amoy_address.json
contracts/ethereum/: foundry.toml  hardhat.config.js  package-lock.json  package.json
contracts/script/: Agence.s.sol  Counter.s.sol
contracts/src/: Agence.sol  AgenceGigs.sol  AgenceGovernor.sol  AgenceToken.sol  AgenceTreasury.sol
contracts/test/: Agence.t.sol  Counter.t.sol
core/algorand/: package-lock.json
docs/: package-lock.json  package.json
docs/pages/: _meta.ts
modules/near/: Cargo.toml  Makefile  README.md
modules/near/agence_governance/: Cargo.toml  build.sh
modules/near/agence_governance/src/: external.rs  proposals.rs
server/: .air.toml  Makefile  go.mod  go.sum  package-lock.json
server/cmd/: app.go
server/database/: connect.go
server/handlers/: gig_handler.go  user_handler.go
server/interfaces/: gig_dtos.go  user_dtos.go
server/middlewares/: auth_middleware.go
server/models/: gig_model.go  user_model.go
server/repositories/: gig_repository.go  user_repository.go
(+221 files in other folders)
